--- a/content/index.css
+++ b/content/index.css
@@ -115,6 +115,32 @@ h1 {
   animation: four-oh-four 2s linear infinite;
 }
 
+h2 {
+  z-index: 3;
+  position: absolute;
+  font: bold 25px/25px Arial, sans-serif;
+  left: 50%;
+  top: 50%;
+  margin-top: 100px;
+  width: 100%;
+  margin-left: -50%;
+  height: 200px;
+  text-align: center;
+  color: transparent;
+  text-shadow: 0 0 30px rgba(0, 0, 0, .5);
+  animation: four-oh-four 2s linear infinite;
+}
+
+img {
+  z-index: 3;
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%); /* IE 9 */
+  -webkit-transform: translate(-50%, -50%); /* Chrome, Safari, Opera */
+}
+
 @keyframes four-oh-four {
   0% {
     text-shadow: 0 0 30px rgba(0, 0, 0, .5);
